--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-cloudpickle==1.2.1
-future==0.17.1
-gym==0.14.0
-numpy==1.16.4
-Pillow==6.2.0
-pyglet==1.3.2
-scipy==1.3.0
-six==1.12.0
-pytest_cases
+cloudpickle==1.3.0
+future==0.18.2
+gym==0.17.2
+numpy==1.19.2
+pillow==7.2.0
+pyglet==1.5.0
+scipy==1.5.2
