--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "ma-gym"
 version = "0.0.1"
 description = "A collection of multi agent environments based on OpenAI gym."
-authors = ["Anurag Koul <koulanurag@gmail.com>", "Jan Uhlík <jan@uhlik.me>"]
+authors = ["Anurag Koul <koulanurag@gmail.com>"]
 maintainers = ["Jan Uhlík <jan@uhlik.me>"]
 readme = "README.md"
 license = "Apache License 2.0"
@@ -30,7 +30,12 @@ ipdb = "*"
 pytest = "^6.0.1"
 pytest_cases = "^2.2.2"
 imageio = "^2.9.0"
+dephell = "^0.8.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.dephell.main]
+from = {format = "poetry", path = "pyproject.toml"}
+to = {format = "setuppy", path = "setup.py"}
